Refactored larger procedures into custom functions

--- a/notebooks/ICA Data and Voltage Regulation.ipynb
+++ b/notebooks/ICA Data and Voltage Regulation.ipynb
@@ -26,6 +26,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efd6666e",
+   "metadata": {},
+   "source": [
+    "The goal is to find nodes that are represented in both the ICA hourly data and the derived topology, then determine which of these nodes may benefit from voltage regulation hardware."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "950e2aa5",
